--- a/inc/css/style_section1.css
+++ b/inc/css/style_section1.css
@@ -1,19 +1,4 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-}
-
-
-h2 {
-  vertical-align: center;
-  text-align: center;
-}
-
-html, body {
-  margin: 0;
-  height: 100%;
-}
+/* Première section */
 
 .titresection1 {
   font-weight: 800;
@@ -28,17 +13,17 @@ html, body {
   text-align: center;
   vertical-align: middle;
   padding-top: 35vh;
-  padding-left: 15px;
   padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
   width: 100%;
   height: 653px;
   background-image: url(../img/banner_bg.jpg);
-  background-position: center calc(50% + 0px);
+  background-position: center calc(50% + 0px); /* A mettre en place */
   background-repeat: no-repeat;
   background-size: cover;
-  color: #FFF;
+  color: #fff;
 }
 
 .psection1 {
